--- a/index.html
+++ b/index.html
@@ -1,25 +1,14 @@
 <!DOCTYPE html>
-<html lang = "en">
-    <head>
-        <meta charset="utf-8">
-        <meta name = "viewport" content = "width=device-width, initial-scale=1.0">
-        <title>Egg Game</title>
-        <script src = 'lib/phaser.js'></script><script src="./lib/phaser.js"></script>
-        <script src="./src/scenes/load.js"></script>
-        <script src="./src/scenes/play.js"></script>
-        <script src="./src/scenes/mainmenu.js"></script>
-        <script src="./src/scenes/endscreen.js"></script>
-        <script src="./src/main.js"></script>
-        
-        
-    </head>
-    <style>
-        body {
-            background-color: black;
-        }
-        canvas {
-                width: 5%;
-                height: 5%;
-            }
+<html>
+<head>
+    <title>Recoil Movement Game</title>
+    <style> 
+        body { margin: 0; }
+        canvas { display: block; }
     </style>
+</head>
+<body>
+    <script src="https://cdn.jsdelivr.net/npm/phaser@3.55.2/dist/phaser.min.js"></script>
+    <script src="./src/game.js"></script>
+</body>
 </html>
