--- a/index.html
+++ b/index.html
@@ -27,6 +27,10 @@
 <body>
     <div id="game-container"></div>
     <script src="https://cdn.jsdelivr.net/npm/phaser@3.55.2/dist/phaser.min.js"></script>
-    <script src="./src/game.js"></script>
+    <script src="./lib/phaser.js"></script>
+    <script src="./src/scenes/MenuScene.js"></script>
+    <script src="./src/scenes/PlayScene.js"></script>
+    <script src="./src/scenes/GameOverScene.js"></script>
+    <script src="./src/main.js"></script>
 </body>
 </html>
